<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.easysoa.discovery.code</groupId>
  <artifactId>easysoa-discovery-code-mavenplugin</artifactId>
  <packaging>maven-plugin</packaging>
  <name>EasySOA Discovery Code Maven Plugin</name>
  <version>1.0-SNAPSHOT</version>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <easysoa.version>1.0-SNAPSHOT</easysoa.version>
  </properties>

  <dependencies>
    <!-- EasySOA -->
    <dependency>
      <groupId>org.easysoa.registry</groupId>
      <artifactId>easysoa-registry-rest-client</artifactId>
      <version>${easysoa.version}</version>
    </dependency>
    <dependency>
      <groupId>org.easysoa.registry</groupId>
      <artifactId>easysoa-registry-doctypes-java-core</artifactId>
      <version>${easysoa.version}</version>
    </dependency>
    <dependency>
      <groupId>org.easysoa.registry</groupId>
      <artifactId>easysoa-registry-rest-server</artifactId>
      <version>${easysoa.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easysoa.registry</groupId>
      <artifactId>easysoa-registry-test</artifactId>
      <version>${easysoa.version}</version>
      <scope>test</scope>
    </dependency>
  
    <!-- Maven parsing -->
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-plugin-api</artifactId>
      <version>2.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-project</artifactId>
      <version>2.0</version>
    </dependency>
    
    <!-- Code parsing -->
    <dependency>
      <groupId>com.thoughtworks.qdox</groupId>
      <artifactId>qdox</artifactId>
      <version>1.12.1</version><!-- else if 1.12 procedure return type is null http://jira.codehaus.org/browse/QDOX-214 -->
    </dependency>
    
    <!-- Tests -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.10</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <!-- ======= -->
  <!-- Plugins -->
  <!-- ======= -->
  <build>
    <plugins>
      <!-- Compile with Java 1.6 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    
    <profile>
      <id>sonar</id>
      <!-- For code coverage with Sonar and cobertura
      requires a "main" build :
      -U -Dtest=false -DfailIfNoTests=false -Psonar clean install -s "/home/openwide/.m2/settings.xml.easysoa"
      and a post-build sonar action with its own build :
      -Psonar -DargLine=""
      and enough memory :
      -Xmx512m -XX:MaxPermSize=256m
      -->
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>cobertura-maven-plugin</artifactId>
            <version>2.6</version>
          </plugin>
        </plugins>
      </build>
    </profile>
    
  </profiles>

</project>
